--- a/client/index.html
+++ b/client/index.html
@@ -26,6 +26,9 @@
 </body>
 <script>
 var world = [];
+var socket;
+var agar = { x: 0, y: 0, width: 6000, height: 6000 };
+var currentPlayer;
 </script>
 <script src="utils.js"></script>
 <script src="world.js"></script>
@@ -35,4 +38,5 @@ var world = [];
 <script src="shape/Image.js"></script>
 <script src="inputs.js"></script>
 <script src="collider.js"></script>
+<script src="socket.js"></script>
 </html>
